# prometheus

./: .gitignore  BIBLE.md  EVOLUTION_37.txt  README.md  WORLD.md  colab_bootstrap_shim.py  colab_launcher.py  config.env.example  edit_test.py  fix_loop.py  fix_loop2.py  href=\"[^\"]*\"  launcher.py  launcher_fix.patch  pyproject.toml  requirements.txt
dashboard/: server.py
dashboard/static/: index.html
deploy/: Caddyfile  prometheus-agent.service  prometheus-dashboard.service  setup.sh
docs/: app.html  data.json  index.html  telegram_groups.md
mcp_servers/: README.md  crypto_defi_server.py  package.json
memory/knowledge/: evolution-cycles.md
ouroboros/: __init__.py  agent.py  apply_patch.py  codex_auth.py  consciousness.py  context.py  llm.py  loop.py
ouroboros/tools/: browser.py  core.py  dashboard.py  evolution_stats.py  self_portrait.py  webapp_push.py
prometheus/: __init__.py  agent.py  consciousness.py  context.py  llm.py  loop.py  memory.py  review.py  sustainability.py  utils.py
prometheus/channels/: __init__.py  group_handler.py  message_types.py  middleware.py  state.py  telegram_enhanced.py  test_group_handler.py  (+1 more)
prompts/: BASE.md  CONSCIOUSNESS.md  EVOLUTION.md  SCRATCHPAD_SUMMARY.md  SYSTEM.md
supervisor/: __init__.py  events.py  git_ops.py  group_integration.py  message_router.py  queue.py  state.py  telegram.py  test_message_router.py  workers.py
tests/: __init__.py  test_constitution.py  test_knowledge.py  test_message_routing.py  test_outdated_skipped.py  test_smoke.py  test_vision.py
tmp/: extract_loop.py  update_context.py
(+35 files in other folders)
