[project]
name = "ouroboros"
version = "6.3.3"
description = "Self-modifying AI agent that writes its own code and evolves autonomously"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "telebot>=0.0.5",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
]

[tool.pytest.ini_options]
target-version = "py310"
testpaths = ["tests"]
